--- a/Sqlite.Infrastructure/Sqlite.Infrastructure.csproj
+++ b/Sqlite.Infrastructure/Sqlite.Infrastructure.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.1.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Sqlite.Core\Sqlite.Core.csproj" />
+  </ItemGroup>
+
 </Project>
