--- a/Sqlite.WebUi/Sqlite.WebUi.csproj
+++ b/Sqlite.WebUi/Sqlite.WebUi.csproj
@@ -12,4 +12,9 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Sqlite.Core\Sqlite.Core.csproj" />
+    <ProjectReference Include="..\Sqlite.Infrastructure\Sqlite.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
